--- a/DeviceSettings/res/xml/main.xml
+++ b/DeviceSettings/res/xml/main.xml
@@ -21,8 +21,8 @@
             android:summary="@string/panel_category_summary"
             android:persistent="false" >
             <intent android:action="android.intent.action.MAIN"
-                    android:targetPackage="com.aosip.device.DeviceSettings"
-                    android:targetClass="com.aosip.device.DeviceSettings.PanelSettingsActivity" />
+                    android:targetPackage="com.magma.device.DeviceSettings"
+                    android:targetClass="com.magma.device.DeviceSettings.PanelSettingsActivity" />
         </Preference>
     </PreferenceCategory>
 
@@ -57,7 +57,7 @@
 
     <PreferenceCategory
         android:title="@string/category_vibrator">
-        <com.aosip.device.DeviceSettings.VibratorStrengthPreference
+        <com.magma.device.DeviceSettings.VibratorStrengthPreference
             android:key="vib_strength"
             android:title="@string/vib_strength_title_head"
             android:summary="@string/vib_strength_summary_head" />
